Fixed tooltip and horizontal scroll

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,10 +1,10 @@
-/* Changes done on all pages. !important to overwrite any other css on other stylesheets */
 @import 'https://fonts.googleapis.com/css?family=Open+Sans|Raleway';
+
+/* Changes done on all pages. !important to overwrite any other css on other stylesheets */
 * {
     /* Change all font to Lucida Grande */
-    /*font-family: "Lucida Grande", "Lucida Sans Unicode", Arial, sans-serif;*/
-    /*font-family: 'Raleway', sans-serif;*/
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Lucida Grande", "Lucida Sans Unicode", Arial, sans-serif;
+
     /* Change all rounded borders to square */
     border-radius: 0 !important;
     -moz-border-radius: 0 !important;
@@ -14,6 +14,8 @@
 /* <body> css on all pages */
 body {
     background-color: #f5f5f5; /* Change BK-color for all pages */
+    overflow-x: hidden; /* Remove horizontal scroll on all pages */
+    -ms-overflow-x: hidden; /* Remove horizontal scroll on all pages for older IE*/
 }
 
 /* <h1> on the frontpage */
@@ -64,14 +66,6 @@ body {
 /* The two buttons (position and help) thats on either side of the searchbar in index.html */
 .input-group-addon {
     cursor: pointer;
-}
-
-footer {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    overflow:hidden;
 }
 
 /* Medium devices (desktops, 992px and up) */
